Nova tela :desktop_computer:

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -21,7 +21,7 @@
 
         </form>
         <div class="login-header-right-form-btn">
-          <button (click)="openRegister()">Criar nova conta</button>
+          <button routerLink="/register" (click)="openRegister()">Criar nova conta</button>
         </div>
 
 
