--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -74,6 +74,7 @@
                         outline: none;
                         font-size: 20px;
                         color: $white;
+                        cursor: pointer;
                     }
 
                     > a {
@@ -98,6 +99,7 @@
                         font-size: 17px;
                         color: $white;
                         background: $success-button-color;
+                        cursor: pointer;
                     }
                 }
             }
