Tela de registro e de home :desktop_computer:

--- a/src/app/components/popup/register/register.component.html
+++ b/src/app/components/popup/register/register.component.html
@@ -1,3 +1,26 @@
-<p>
-  teste
-</p>
+<section>
+
+  <div class="register-header">
+
+    <h1>Cadastre-se</h1>
+
+    <p>É rápido e fácil.</p>
+  </div>
+
+  <div class="register-body">
+    <div class="register-body-name">
+      <input type="text" placeholder="Nome">
+      <input type="text" placeholder="Sobrenome">
+    </div>
+
+    <input type="text" placeholder="Celular ou email">
+    <input type="text" placeholder="Nova senha">
+    <p>Ao clicar em Cadastre-se, você concorda com nossos <span> Termos </span>, <span> Política de Dados </span> e
+      <span>Política de Cookies </span>. Você poderá
+      receber notificações por SMS e cancelar isso quando quiser.
+    </p>
+    <div class="register-body-submit">
+      <input type="submit">
+    </div>
+  </div>
+</section>
